# vocab-builder-to-md

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  config.json  main.py  pyproject.toml  setup.py
src/: config.py  exporter.py  filters.py  main.py  preview.py  ui.py  window_utils.py
